package pl.pwr.student.gogame.model;

public class Game {
    private Board board;
    private String gameCode;

    public Game() {
        
    }
}