package pl.pwr.student.gogame.model;

public class Player {

}
