package pl.pwr.student.gogame.model.commands;

public abstract class Command {

}
