package pl.pwr.student.gogame.model;

public class ComplexRule implements Rule {

}