package pl.pwr.student.gogame.model;

public class RuleSet {

}