package pl.pwr.student.gogame.model;

public class SimpleRule implements Rule {

}