package pl.pwr.student.gogame.model;

public class BlackTurn implements GameState {

}