package pl.pwr.student.gogame.model;

public class EndOfGame implements GameState {

}