package pl.pwr.student.gogame.model;

public interface GameState {
    
}