package pl.pwr.student.gogame.model;

public class WhiteTurn implements GameState {

}