@startuml
Scale 1.5
package Model {

  class Game {
  }

  class Player {
  }

  package States {
    interface GameState {
    }

    class WhiteTurn {
    }

    class BlackTurn {
    }

    class EndOfGame {
    }

    GameState <|.. WhiteTurn
    GameState <|.. BlackTurn
    GameState <|.. EndOfGame
  }

  package rules {
    class RuleSet {
    }

    interface Iterator {
    }

    interface Rule {
    }

    abstract class SimpleRule {
    }

    abstract class ComplexRule {
    }

    Rule <|.. SimpleRule
    Rule <|.. ComplexRule
    ComplexRule *-->  Rule
    ComplexRule *-- RuleSet
    RuleSet *-- Rule
    RuleSet ..|> Iterator
  }

  package board {
    class Board {
    }

    Enum FieldState {
    }

    Board *-- FieldState
  }
  
  package commands {
    abstract Command {
    }
    
    class MoveCommand {
    }
    
    MoveCommand --|> Command
  }
  
  package builder {
    abstract Builder {}
    class StandartBuilder {}
    StandartBuilder --|> Builder
  }

  Game  o-- RuleSet
  Game  *-- Board
  Game *--> GameState
  Game *-- Player
  Game --> Command
  Game --> Builder
}
@enduml
